# nornir_napalm

./: Dockerfile  Makefile  README.md  README.rst  pyproject.toml  setup.cfg
.github/workflows/: main.yaml
docs/: Makefile  index.html
docs/doctrees/: environment.pickle  index.doctree
docs/doctrees/api/: connections.doctree  index.doctree  tasks.doctree
docs/doctrees/tutorials/: index.doctree  napalm_cli.doctree
docs/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/html/_sources/api/: connections.rst.txt  index.rst.txt  tasks.rst.txt
docs/html/_sources/tutorials/: index.rst.txt
docs/html/api/: connections.html  index.html  tasks.html
docs/html/tutorials/: index.html  napalm_cli.html
docs/source/: conf.py  index.rst
docs/source/tutorials/: napalm_cli.ipynb  napalm_traceroute.ipynb
docs/source/tutorials/inventory/: defaults.yaml  hosts.yaml
docs/source/tutorials/mocked/: traceroute.1
nornir_napalm/connections/: __init__.py
nornir_napalm/plugins/connections/: __init__.py
nornir_napalm/plugins/tasks/: __init__.py  napalm_cli.py  napalm_configure.py  napalm_confirm_commit.py  napalm_get.py  napalm_ping.py  napalm_rollback.py  napalm_traceroute.py  napalm_validate.py
tests/: conftest.py
tests/inventory_data/: hosts.yaml
tests/unit/: test_napalm_cli.py  test_napalm_configure.py  test_napalm_confirm_commit.py  test_napalm_get.py  test_napalm_rollback.py  test_napalm_validate.py
