[tool.poetry]
name = "nornir_napalm"
version = "0.4.0"
description = "NAPALM's plugins for nornir"
authors = ["David Barroso <dbarrosop@dravetech.com>"]
license = "Apache-2.0"

[tool.poetry.plugins."nornir.plugins.connections"]
"napalm" = "nornir_napalm.plugins.connections:Napalm"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
napalm = "^4"
nornir = { version = "~3", allow-prereleases = true }

[tool.poetry.dev-dependencies]
black = "^22.6.0"
mypy = "1.0.0"
pylama = "8.4.1"
pytest = "7.2.1"
nbval = "*"
jupyter = "^1"
sphinx = "^4"
sphinxcontrib-napoleon = "^0.7"
nbsphinx = "^0.8"
sphinx-issues = "^3.0"
sphinx_rtd_theme = "^1.0"
nornir_utils = { version = "*", allow-prereleases = true }
pytest-cov = "4.0.0"

[build-system]
requires = ["poetry>=1.3.2"]
build-backend = "poetry.masonry.api"
