[tool.poetry]
name = "nornir_napalm"
version = "0.5.0"
description = "NAPALM's plugins for nornir"
authors = ["David Barroso <dbarrosop@dravetech.com>"]
license = "Apache-2.0"

[tool.poetry.plugins."nornir.plugins.connections"]
"napalm" = "nornir_napalm.plugins.connections:Napalm"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
napalm = "^5"
nornir = { version = "~3", allow-prereleases = true }

[tool.poetry.dev-dependencies]
black = "24.3.0"
mypy = "1.9.0"
pylama = "8.4.1"
pytest = "^8.1.1"
nbval = "^0.11.0"
jupyter = "^1"
sphinx = "^7"
sphinxcontrib-napoleon = "^0.7"
nbsphinx = "^0.9"
sphinx-issues = "^4"
sphinx_rtd_theme = "^2"
nornir_utils = { version = "*", allow-prereleases = true }
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry>=1.3.2"]
build-backend = "poetry.masonry.api"
